@@ -48,6 +48,14 @@
     "type": "NV"
   },
   {
+    "date": "2025-06-19",
+    "description": "Juneteenth National Independence Day",
+    "locale": "en-US",
+    "notes": "",
+    "region": "",
+    "type": "NF"
+  },
+  {
     "date": "2025-07-04",
     "description": "Independence Day",
     "locale": "en-US",
